--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
     <hr>
     
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="movie-ranking project">
+    <h3><a href="./movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src=".images/movie-ranking.png" height="200" alt="movie-ranking project">
 
-   <h3> <a href="./public/birthday-invite.html">birthday-invite project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="birthday-invite project">
+   <h3> <a href="./birthday-invite.html">birthday-invite project</a></h3>
+    <img src="./images/birthday-invite.png" height="200" alt="birthday-invite project">
 
     <hr>
 
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="./about.html">About Me</a>
+    <a href="./contact.html">Contact Me</a>
 
     
 </body>
