--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <hr>
     
     <h3><a href="./movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./movie-ranking.png" height="200" alt="movie-ranking project">
+    <img src="movie-ranking.png" height="200" alt="movie-ranking project">
 
    <h3> <a href="./birthday-invite.html">birthday-invite project</a></h3>
-    <img src="./birthday-invite.png" height="200" alt="birthday-invite project">
+    <img src="birthday-invite.png" height="200" alt="birthday-invite project">
 
     <hr>
 
